More space for permGen