@@ -25,6 +25,8 @@ allprojects {
     testCompile 'org.scalatest:scalatest_2.11:2.1.5'
   }
 
+  gradleOpts = "-XX:MaxPermSize=512M"
+
   task test(overwrite: true, dependsOn: compileTestScala) << {
 
     ant.taskdef(
